# mcp-databricks-app

./: .gitignore  CLAUDE.md  README.md  app.yaml  app_status.sh  config.yaml  databricks-mcp-launcher.sh  deploy.sh  pyproject.toml  requirements.txt  run-mcp-proxy.sh  run_app_local.sh  setup.sh  watch.sh
.claude/commands/: debug.md  deploy.md  dev.md  fix.md  open-app.md  setup-mcp.md  status.md
claude_scripts/: README.md  inspect_local_mcp.sh  inspect_remote_mcp.sh  test_local_mcp_curl.sh  test_local_mcp_proxy.sh  test_remote_mcp_curl.sh  test_remote_mcp_proxy.sh
client/: index.html  package.json  tailwind.config.js  vite.config.ts
client/src/: App.tsx
client/src/fastapi_client/: index.ts
client/src/fastapi_client/models/: UserInfo.ts  UserWorkspaceInfo.ts
client/src/fastapi_client/services/: ApiService.ts  McpService.ts  PromptsService.ts  UserService.ts
client/src/lib/: api.ts
client/src/pages/: PromptsPage.tsx  WelcomePage.tsx
dba_mcp_proxy/: README.md  __init__.py  mcp_client.py
docs/: product.md
docs/databricks_apis/: mlflow_genai.md
prompts/: check_system.md  list_files.md  ping_google.md
scripts/: generate_semver_requirements.py  make_fastapi_client.py
server/: app.py  make_openapi.py  prompts.py  tools.py
server/routers/: __init__.py  mcp_info.py  prompts.py  user.py
server/services/: user_service.py
